<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/topLeft"
            android:layout_width="0dp"
            android:layout_height="260px"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:gravity="center">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text view"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/topRight"
            android:orientation="horizontal"
            android:layout_width="0px"
            android:layout_height="260px"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/shape">

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
