<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:title="Next"
    android:id="@+id/menu_next"
    app:showAsAction="always"/>
</menu>