<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jatingarg.section1.MainActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="Enter Your Name" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimaryDark"
        android:text="Submit"
        android:textColor="@android:color/white" />

</LinearLayout>
